replace ApiSample with ApiFlowSample because Last40Days never has Temp